python/test-data/testTypesTuple1.err
Traceback (most recent call last):
  File "test-data/testTypesTuple1.py", line 5, in <module>
    foo(1)
WyppTypeError: got value of wrong type
given:    1
expected: value of type tuple[int, ...]

context: foo(l: tuple[int, ...]) -> int
                ^^^^^^^^^^^^^^^
declared at: test-data/testTypesTuple1.py:1
caused by: test-data/testTypesTuple1.py:5
  | foo(1)
